@@ -5,7 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>douban-client</groupId>
     <artifactId>douban-client</artifactId>
+    <packaging>apk</packaging>
     <version>1.1</version>
+
+    <properties>
+        <scala.version>2.10.0</scala.version>
+    </properties>
     <repositories>
         <repository>
             <id>scala-sdk</id>
@@ -40,17 +45,115 @@
             <artifactId>android-integration</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.scaloid</groupId>
+            <artifactId>scaloid</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jarsigner-plugin</artifactId>
+                        <version>RELEASE</version>
+                        <executions>
+                            <execution>
+                                <id>signing</id>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                                <phase>package</phase>
+                                <inherited>true</inherited>
+                                <configuration>
+                                    <archiveDirectory></archiveDirectory>
+                                    <includes>
+                                        <include>target/*.apk</include>
+                                    </includes>
+                                    <keystore>scala-test.keystore</keystore>
+                                    <storepass>scalatest</storepass>
+                                    <keypass>scalatest</keypass>
+                                    <alias>androidscalatest</alias>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>com.jayway.maven.plugins.android.generation2</groupId>
+                        <artifactId>android-maven-plugin</artifactId>
+                        <inherited>true</inherited>
+                        <configuration>
+                            <sign>
+                                <debug>false</debug>
+                            </sign>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>alignApk</id>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>zipalign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     <build>
         <plugins>
             <plugin>
-                <groupId>com.tiobe.jacobe</groupId>
-                <artifactId>maven-jacobe-plugin</artifactId>
+                <groupId>com.jayway.maven.plugins.android.generation2</groupId>
+                <artifactId>android-maven-plugin</artifactId>
                 <version>RELEASE</version>
+                <configuration>
+                    <androidManifestFile>${project.basedir}/AndroidManifest.xml</androidManifestFile>
+                    <assetsDirectory>${project.basedir}/assets</assetsDirectory>
+                    <resourceDirectory>${project.basedir}/res</resourceDirectory>
+                    <nativeLibrariesDirectory>${project.basedir}/src/native</nativeLibrariesDirectory>
+                    <sdk>
+                        <platform>16</platform>
+                    </sdk>
+                    <deleteConflictingFiles>true</deleteConflictingFiles>
+                    <undeployBeforeDeploy>true</undeployBeforeDeploy>
+                    <dex>
+                        <jvmArguments>
+                            <jvmArgument>-Xmx1024M</jvmArgument>
+                            <jvmArgument>-XX:MaxPermSize=512M</jvmArgument>
+                        </jvmArguments>
+                    </dex>
+                    <proguard>
+                        <skip>false</skip>
+                        <config>proguard-project.txt</config>
+                        <jvmArguments>
+                            <jvmArgument>-Xmx1024M</jvmArgument>
+                        </jvmArguments>
+                    </proguard>
+                </configuration>
+                <extensions>true</extensions>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
+                <version>2.15.2</version>
+                <configuration>
+                    <scalaVersion>${scala.version}</scalaVersion>
+                </configuration>
                 <executions>
                     <execution>
                         <id>scala-compile-first</id>
@@ -61,20 +164,11 @@
                         </goals>
                     </execution>
                 </executions>
-<!--                <configuration>
-                    <sourceDir>src/</sourceDir>
-                            <excludes>
-                                            <exclude>**/net/liftjson/json/**/*.scala</exclude>
-                                        </excludes>
-                    <jvmArgs>
-                        <jvmArg>-Xms64m</jvmArg>
-                        <jvmArg>-Xmx256m</jvmArg>
-                    </jvmArgs>
-                </configuration>-->
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.7</version>
                 <executions>
                     <execution>
                         <id>add-source</id>
@@ -84,7 +178,7 @@
                         </goals>
                         <configuration>
                             <sources>
-                                <source>src/</source>
+                                <source>src</source>
                             </sources>
                         </configuration>
                     </execution>
@@ -92,5 +186,18 @@
             </plugin>
         </plugins>
     </build>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.scala-tools</groupId>
+                <artifactId>maven-scala-plugin</artifactId>
+                <version>2.15.2</version>
+                <configuration>
+                    <scalaVersion>${scala.version}</scalaVersion>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 
 </project>
